add State resource
