# openapi.yaml
@@ -7,6 +7,48 @@ servers:
   - url: http://localhost:8080
     description: Local server
 paths:
+  /state:
+    get:
+      summary: current service state
+      description: Returns a Status object
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/State'
+  /youtube/channel:
+    post:
+      description: Store new Youtube channel
+      responses:
+        201:
+          description: Successfully stored
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/YoutubeChannel'
+  /youtube/channel/{id}:
+    get:
+      summary: Get Youtube Channel by ID
+      description: Returns a YoutubeChannel object by ID
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: ID of the channel
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/YoutubeChannel'
+        '404':
+          description: Not found
+          content: {}
   /statistics/generate:
     post:
       description: Initiate statistics generation
@@ -17,30 +59,33 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StatGenerationStarted'
-
-  /books/{id}:
-    get:
-      summary: Get a book by ID
-      description: Returns a single book object by ID
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          required: true
-          description: ID of the book to retrieve
-      responses:
-        '200':
-          description: Successful response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Book'
-        '404':
-          description: Book not found
-          content: {}
 components:
   schemas:
+    State:
+      description: Service status
+      type: object
+      properties:
+        uptime:
+          type: string
+    YoutubeChannel:
+      description: Youtube Channel
+      type: object
+      required:
+        - name
+        - youtube_id
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: internal id
+        name:
+          type: string
+          description: channel name
+        youtube_id:
+          type: string
+          description: youtube uniq
+        created_at:
+          type: string
     StatGenerationStarted:
       description: Generation started
       type: object
@@ -51,20 +96,3 @@ components:
           type: string
           description: path for requests about status of the generation task
           example: /statistics/job/1
-    Book:
-      type: object
-      required:
-        - id
-        - title
-        - author
-      properties:
-        id:
-          type: integer
-          format: int64
-          description: Unique identifier of the book
-        title:
-          type: string
-          description: Title of the book
-        author:
-          type: string
-          description: Author of the book
